# order

./: .gitignore  CHANGES.md  Makefile  README.md  compare.opam  dune-project  order.opam  ordering.opam
docs/: index.html
docs/order/: index.html
docs/order/Order/: index.html
docs/order/Order/Comparator/: index.html
docs/order/Order/Equal0/: index.html
docs/order/Order/Equal0/Extend/: index.html
docs/order/Order/Equal0/Extend/argument-1-Base/: index.html
docs/order/Order/Equal0/module-type-Extension/: index.html
docs/order/Order/Equal1/: index.html
docs/order/Order/Equal1/Extend/: index.html
docs/order/Order/Equal1/Extend/argument-1-Base/: index.html
docs/order/Order/Equal1/module-type-Extension/: index.html
docs/order/Order/Equal2/: index.html
docs/order/Order/Equal2/Extend/: index.html
docs/order/Order/Equal2/Extend/argument-1-Base/: index.html
docs/order/Order/Equal2/module-type-Extension/: index.html
docs/order/Order/Equality/: index.html
docs/order/Order/Ordered0/: index.html
docs/order/Order/Ordered0/Extend/: index.html
docs/order/Order/Ordered0/Extend/argument-1-Base/: index.html
docs/order/Order/Ordered0/module-type-Extension/: index.html
docs/order/Order/Ordered1/: index.html
docs/order/Order/Ordered1/Extend/: index.html
docs/order/Order/Ordered1/Extend/argument-1-Base/: index.html
docs/order/Order/Ordered1/module-type-Extension/: index.html
docs/order/Order/Ordered2/: index.html
docs/order/Order/Ordered2/Extend/: index.html
docs/order/Order/Ordered2/Extend/argument-1-Base/: index.html
docs/order/Order/Ordered2/module-type-Extension/: index.html
docs/order/Order/Ordering/: index.html
docs/order/Order/module-type-Equal/: index.html
docs/order/Order/module-type-Equal0/: index.html
docs/order/Order/module-type-Equal1/: index.html
docs/order/Order/module-type-Equal2/: index.html
docs/order/Order/module-type-Ordered/: index.html
docs/order/Order/module-type-Ordered0/: index.html
docs/order/Order/module-type-Ordered1/: index.html
docs/order/Order/module-type-Ordered2/: index.html
docs/order/Order_magic/: index.html
examples/: Compare_records.ml  Ordered_type.ml  Transactions.ml
src/: .merlin  Compare.ml  Compare.mli  Order.ml  Order.mli  Order_magic.ml  Order_magic.mli  Ordering.ml  Ordering.mli  dune  index.mld  jbuild
