opam-version: "1.2"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "http://rizo.github.io/order"
doc: "http://rizo.github.io/order/doc"
license: "ISC"
dev-repo: "https://github.com/rizo/order.git"
bug-reports: "https://github.com/rizo/order/issues"

synopsis: "Comparison and ordering of OCaml values"
tags: ["org:rizo" "comparison"]

available: [ ocaml-version >= "4.01.0"]

depends: [
  "jbuilder" {build}
]

build: [
  [ "jbuilder" "build" "-p" name "-j" jobs "@install" ]
]

