opam-version: "1.2"
maintainer: "Rizo I. <rizo@odis.io>"
authors: ["Rizo I. <rizo@odis.io>"]
homepage: "http://odis-labs.github.io/order"
doc: "http://odis-labs.github.io/order"
license: "ISC"
dev-repo: "https://github.com/odis-labs/order.git"
bug-reports: "https://github.com/odis-labs/order/issues"

synopsis: "Comparison and ordering of OCaml values"
tags: ["org:odis" "comparison"]

available: [ ocaml-version >= "4.01.0"]

depends: [
  "dune" {build & >= "1.0"}
  "stdlib-shims"
  "result"
]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

