opam-version: "1.2"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "http://rizo.github.io/ordering"
doc: "http://rizo.github.io/ordering/doc"
license: "ISC"
dev-repo: "https://github.com/rizo/ordering.git"
bug-reports: "https://github.com/rizo/ordering/issues"
tags: ["org:rizo" "comparison"]
available: [ ocaml-version >= "4.01.0"]
depends: [
  "jbuilder" {build}
]
build: [[
  "jbuilder" "build" "--only-packages" "%{name}%" "--root" "." "-j" jobs "@install"
]]
descr: "
Interfaces, modules and operations for ordering and comparison of OCaml values.
"
